--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1, user-scalable=no">
 <title>最簡易會員登入示例（GitHub + Netlify）</title>
 <!-- Netlify Identity Widget（處理註冊／登入 UI） -->
-<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+<script src="https://checkinhk.netlify.app.netlify.com/v1/netlify-identity-widget.js"></script>
 <style>
   :root{ --bg:#0f172a; --panel:#111827; --text:#e5e7eb; --accent:#22c55e; --muted:#9ca3af; }
   html,body{height:100%;}
